# glowbot

./: .gitignore  README.md  playground.ipynb  pyproject.toml  requirements.txt  test_routine_planner.py
alembic/: env.py
alembic/versions/: 07571212fdf0_initial_schema.py  a1b2c3d4e5f6_add_routine_json_to_users.py  f3873f52e3ce_rewrite_two_table_schema.py
app/: config.py  dashboard.py  database.py  main.py  repository.py  schemas.py
app/agents/: __init__.py  interview.py  orchestrator.py  routine_planner.py
app/core/: analysis.py  chat.py  webhook.py
app/crud/: __init__.py  base.py  conversation.py  user.py
app/models/: __init__.py  base.py  conversation.py  conversation_schemas.py  db.py  health_info.py  preference.py  routine.py  skin_concern.py  skincare.py  user.py
app/repositories/: __init__.py  conversation_repository.py  user_repository.py
app/services/: claude.old.py  claude.py  conversation.py  message_splitter.py  new_recommendation.py  orchestrator.py  recommendation.py  twilio.py
app/templates/: dashboard.html  test.html  user_detail.html
scripts/: init_db.py
tests/: test_orchestrator.py  test_whatsapp.py
