[project]
name = "glowbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.115.6",
    "httpx>=0.27.0",
    "greenlet>=3.3.1",
    "jinja2>=3.1.5",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.10.4",
    "pydantic-ai>=1.59.0",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.46",
    "twilio>=9.4.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "notebook>=7.3.2",
]

[tool.pytest.ini_options]
